# oop-bsuir

./: 3. Refactoring && Code quality.md  4. GRASP and GoF design patterns. Creational patterns.md
materials/forecast-csharp/: Program.cs  WeatherApi.cs  forecast-csharp.csproj  forecast-csharp.http
materials/forecast-csharp/Clients/: IWeatherDataClient.cs  OpenWeatherDataClient.cs
materials/forecast-csharp/Controllers/: CurrentWeatherController.cs
materials/forecast-csharp/Models/: CurrentWeather.cs
materials/forecast-csharp/Properties/: launchSettings.json
materials/forecast-csharp/Utils/: ApiCallException.cs
materials/forecast-general/go/: go.work.sum
materials/forecast-general/kotlin/: build.gradle.kts
materials/forecast-java/: .gitignore  README.md  build.gradle  pom.xml
materials/forecast-kotlin/: README.md  settings.gradle.kts
materials/forecast-kotlin/app/: build.gradle.kts
materials/forecast-kotlin/clients/: build.gradle.kts
materials/forecast-python/: README.md  main.py
materials/forecast-python/api/: weather.py
materials/forecast-python/clients/: weather_data_client.py
materials/forecast-python/controllers/: weather.py
materials/forecast/python/: requirements.txt
materials/forecast/rust/: Cargo.toml  README.md
materials/forecast/rust/api/: Cargo.toml
materials/forecast/rust/api/src/: main.rs  weather.rs
materials/forecast/rust/clients/src/: lib.rs  weather_data_client.rs
materials/forecast/rust/controllers/: Cargo.toml
materials/forecast/rust/models/src/: weather.rs
materials/forecast/rust/shared/src/: responses.rs
materials/orders-csharp/: Infrastructure.cs  Processor.cs  Program.cs  README.md  Staff.cs  orders-csharp.csproj
materials/orders-java/: orders_db.txt
materials/orders-kotlin/: build.gradle.kts
materials/orders/cpp/: models.h
materials/orders/csharp/: Infrastructure.cs  Models.cs  Processor.cs  Staff.cs
materials/orders/kotlin/: README.md  settings.gradle.kts
materials/orders/python/: README.md  infrastructure.py  main.py  models.py  orders_db.txt  processor.py  staff.py
materials/orders/rust/: Cargo.toml
materials/orders/swift/: Infrastructure.swift  Models.swift  Processor.swift  README.md  Staff.swift  main.swift
materials/orders_c++/: infrastructure.h  main.cpp  models.h  processor.h  staff.h
materials/rust/: .gitignore  Cargo.toml
materials/rust/forecast/api/: Cargo.toml
materials/rust/forecast/api/src/: main.rs  weather.rs
(+78 files in other folders)
