[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clients = { version = "0.1.0", path = "../clients" }
controllers = { version = "0.1.0", path = "../controllers" }
dotenvy = "0.15.7"
models = { version = "0.1.0", path = "../models" }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { version = "0.1.0", path = "../shared" }
tokio = {version = "1.49.0", features = ["rt-multi-thread"]}
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
